Fix sidebar overflow

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -29,6 +29,7 @@
     flex-direction: column-reverse;
     align-items: stretch;
     max-height: 100%;
+    max-width: 100%;
     min-height: 0;
     flex: 1;
 
